update Scala 3.7.1