@@ -1,4 +1,4 @@
-//> using scala 3.6.4
+//> using scala 3.7.1
 //> using toolkit 0.7.0
 //> using dep org.apache.commons:commons-digester3:3.2
 //> using dep org.apache.commons:commons-math4-core:4.0-beta1
@@ -8,5 +8,3 @@
 //> using dep org.scala-graph:graph-core_2.13:2.0.3
 //> using dep org.scala-lang.modules::scala-parallel-collections:1.2.0
 //> using dep org.scala-lang.modules::scala-collection-contrib:0.4.0
-//> using options -experimental -language:experimental.namedTuples
-//> using javaOpt --sun-misc-unsafe-memory-access=allow
